--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -1,8 +1,9 @@
 name: Continuous Delivery
 
 permissions:
-  contents: read
-  
+  contents: write
+  packages: write
+
 on:
   push:
     branches:
