--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -19,7 +19,17 @@ jobs:
       - name: Simulando Continuous Delivery
         uses: actions/upload-artifact@v4
         with:
-          name: projetodevops.zip
+          name: projetodevops
           path: |
-            '**.py'
+            **.py
             README.md
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: deliver
+    steps:
+      - uses: actions/download-artifact@v5
+        with:
+          name: projetodevops
+      - name: Display structure of downloaded files
+        run: ls -R
