--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -33,3 +33,22 @@ jobs:
           name: projetodevops
       - name: Display structure of downloaded files
         run: ls -R
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub uses: docker/login-action@v3 with:
+          username: $t secrets .DOCKERHUB_USERNAME 3} password: ${ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v6 with:
+        with:
+          context: .
+          push: true
+          tags: user/app: latest
