Arrumando arquivo delivery

--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -46,7 +46,7 @@ jobs:
           password: ${ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v6 with:
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
