--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: $t secrets .DOCKERHUB_USERNAME 3}
+          username: $t secrets.DOCKERHUB_USERNAME }
           password: ${ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
